--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,15 +8,16 @@ import TheFix from '../components/TheFix.astro';
 import Cta from '../components/Cta.astro';
 import Faq from '../components/Faq.astro';
 import HelpButton from '../components/HelpButton.astro';
+import HowItWorks from '../components/HowItWorks.astro';
 ---
 
 <Layout>
 	<HelpButton />
 	<Hero />
-	<PainPoints />
-	<TheFix />
-	<Cta />
+	<HowItWorks />
 	<WhyChooseUs />
 	<SocialProof />
+	<Cta />
 	<Faq />
+	<Cta />
 </Layout>
