--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -25,7 +25,7 @@ const imageMap = {
         </p>
 
         <div class="flex flex-col justify-center w-full gap-4">
-            <a href="#find-your-fit" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
+            <a href="/pricing/" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
                 <MagnifyingGlass />
                 <p class="w-full">Find My Replacement</p>
             </a>
