--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -36,7 +36,7 @@ import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 			</div>
             <ArrowDownIcon class="h-8 w-full animate-bounce text-primary" />
 		</div>
-            <a href="/find-your-water-heater-replacement" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
+            <a href="/pricing/" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
                 <MagnifyingGlass />
                 <p class="w-full">Find My Replacement</p>
             </a>
