fix nav. update link names

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -26,10 +26,10 @@ import logoText from '../assets/images/whrc-logo-text.png';
         <div class="navbar-center hidden lg:flex justify-between">
             <ul class="menu menu-horizontal px-1 mr-4">
                 <li>
-                    <a aria-label="Frustrated With the Process?" href="/#frustrated-with-the-process">Frustrated With the Process?</a>
+                    <a aria-label="How It Works" href="/#how-it-works">How It Works</a>
                 </li>
                 <li>
-                    <a aria-label="about" href="/#how-we-do-it-differently">We Do It Differently</a>
+                <a aria-label="Why trust us" href="/#why-trust-us">Why Trust Us</a>
                 </li>
                 <li>
                     <a aria-label="pricing" href="/pricing/">Pricing</a>
@@ -65,10 +65,10 @@ import logoText from '../assets/images/whrc-logo-text.png';
             class="menu menu-sm right-1 dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
         >
             <li>
-                <a aria-label="Why DIY Websites Fail" href="/#frustrated-with-the-process/">Frustrated With the Process?</a>
+                    <a aria-label="How It Works" href="/#how-it-works">How It Works</a>
             </li>
             <li>
-                <a aria-label="What We Deliver" href="/#how-we-do-it-differently/">We Do It Differently</a>
+                <a aria-label="Why trust us" href="/#why-trust-us">Why Trust Us</a>
             </li>
             <li>
                 <a aria-label="about" aria-disabled="true" href="/pricing/">Pricing</a>
