--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,3 +24,20 @@ html {
     scroll-behavior: smooth;
     scroll-padding-top: 50px;
 }
+
+@keyframes fade-it-in {
+	from {
+		opacity: 0;
+		transform: translateY(8px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+.animate-fade-it-in {
+	animation: fade-it-in 0.3s ease-in;
+}
+
+
