--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,6 +5,7 @@ import tanklessGroup from '../assets/images/wh-tanklessGroup.png';
 import hybridGroup from '../assets/images/wh-hybridGroup.png';
 import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 import ArrowDown from './icons/ArrowDown.astro';
+import UserCheck from './icons/UserCheck.astro';
 const imageMap = {
 	natDraftGroup,
 	powerVentGroup,
@@ -15,29 +16,30 @@ const imageMap = {
 
 <section class="relative bg-base-100 min-h-[calc(100vh-64px)] flex items-center px-6 text-center text-base-content">
     <div class="max-w-3xl mx-auto w-full">
-        <h1 class="text-4xl sm:text-5xl text-primary font-bold leading-tight mb-6">
-            How Much Does A Water Heater Replacement Cost? <br/><span class="text-secondary">Find Out In 60 Seconds.</span>
+        <h1 class="text-3xl sm:text-5xl text-primary font-bold leading-tight mb-4">
+            How Much Does a Water Heater Replacement Cost in West Michigan? <br/><span class="text-secondary">Find Out In 60 Seconds.</span>
         </h1>
         <p class="text-lg sm:text-xl">
             No sales pitch. No email required.
         </p>
         <p class="text-lg sm:text-xl mb-8">
-            Just real, transparent pricing for your home.
+            Just intant pricing for your home.
         </p>
 
         <div class="flex flex-col justify-center w-full gap-4">
-            <a href="/find-a-water-heater/" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
-                <MagnifyingGlass />
-                <p class="w-full">Find My Replacement</p>
+            <a href="/find-a-water-heater/" class="btn btn-primary text-lg w-full h-fit max-w-xs py-2 mx-auto">
+                <UserCheck />
+                <p class="">Get My Instant Estimate</p>
             </a>
             <a href="/pricing/" class="btn btn-outline text-lg w-full max-w-xs mx-auto">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-receipt-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 21v-16a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v16l-3 -2l-2 2l-2 -2l-2 2l-2 -2l-3 2" /><path d="M14 8h-2.5a1.5 1.5 0 0 0 0 3h1a1.5 1.5 0 0 1 0 3h-2.5m2 0v1.5m0 -9v1.5" /></svg>
-                <p class="w-full">I Know What I Need</p>
+                <p class="">Skip to Pricing</p>
             </a>
         </div>
 
-        <p class="mt-6 text-sm text-gray-500">Trusted across West Michigan.</p>
-        <p class="text-sm text-gray-500">Get instant recommendations and transparent pricing confirmed with a 5-minute video call—no hassle, no commitment.</p>
+        <p class="mt-6 max-w-xs mx-auto text-sm text-gray-500">
+            Trusted local pros for water heater replacement, new installations, and repairs. Serving Grand Rapids and all of West Michigan.
+        </p>
     </div>
     <ArrowDown class="-ml-8 text-base-300 animate-bounce w-full absolute bottom-0 h-12" />
 </section>
