--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -1,5 +1,6 @@
 ---
 import ArrowDownIcon from './icons/ArrowDown.astro';
+import UserCheck from './icons/UserCheck.astro';
 import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 ---
 <section id="how-it-works" class="py-20 px-6 bg-base-100 text-base-content text-center">
@@ -37,8 +38,8 @@ import MagnifyingGlass from './icons/MagnifyingGlass.astro';
             <ArrowDownIcon class="h-8 w-full animate-bounce text-primary" />
 		</div>
             <a href="/find-a-water-heater/" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
-                <MagnifyingGlass />
-                <p class="w-full">Find My Replacement</p>
+                <UserCheck />
+                <p class="w-full">Get My Instant Estimate</p>
             </a>
 	</div>
 </section>
