--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -37,7 +37,7 @@ import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 			</div>
             <ArrowDownIcon class="h-8 w-full animate-bounce text-primary" />
 		</div>
-            <a href="/find-a-water-heater/" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
+            <a href="/" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
                 <UserCheck />
                 <p class="w-full">Get My Instant Estimate</p>
             </a>
