card sizing fix for questions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,24 +15,27 @@ import ArrowDown from '../components/icons/ArrowDown.astro';
 
 <Layout>
 	<!-- <HelpButton /> -->
-<section class="min-h-[calc(100vh-64px)] flex flex-col py-3 px-2 xs:p-6 sm:py-20 text-base-content text-center max-w-6xl mx-auto">
-  <div class="flex flex-col flex-shrink-0">
-    <h1 class="text-xl xs:text-2xl sm:text-4xl text-primary font-bold leading-tight mb-4 ">
-				How Much Does A Water Heater Replacement Cost in West Michigan?
-				<br/>
-				<p class="text-secondary">Get A Quote in Seconds</span>
-			</h1>
-			<p class="text-sm xs:text-md sm:text-2xl leading-tight mb-8 sm:max-w-xl max-w-3xl mx-auto">
-				No sales pitch. No pressure. Just real, transparent pricing from us—a family owned and operated contractor serving West Michigan for over 25 years.
-			</p>
-		</div>
+	<section class="min-h-[calc(100vh-64px)] flex flex-col py-3 px-2 xs:p-6 sm:py-20 text-base-content text-center max-w-6xl mx-auto">
+		<div class="flex flex-col flex-shrink-0">
+			<h1 class="text-xl xs:text-2xl sm:text-4xl text-primary font-bold leading-tight mb-4 ">
+						How Much Does A Water Heater Replacement Cost in West Michigan?
+						<br/>
+						<p class="text-secondary">Get A Quote in Seconds</span>
+					</h1>
+					<p class="text-sm xs:text-md sm:text-2xl leading-tight mb-8 sm:max-w-xl max-w-3xl mx-auto">
+						No sales pitch. No pressure. Just real, transparent pricing from us—a family owned and operated contractor serving West Michigan for over 25 years.
+					</p>
+				</div>
 
-  <div class="max-w-4xl mx-auto sm:mt-24 flex flex-col justify-center">
+		<div class="max-w-4xl mx-auto sm:mt-24 flex flex-col justify-center w-76 xs:w-full sm:w-96">
 			<FindWaterHeaterQuiz client:only />
 		</div>
 
-  <p class="mt-6 text-sm text-gray-500 max-w-sm mx-auto">
-			Prefer to learn more first? Scroll down to see how it works and why local homeowners trust us.
+		<p class="mt-6 text-sm text-gray-500 max-w-sm mx-auto">
+			Prefer to learn more first?
+		</p>
+		<p class="text-sm text-gray-500 max-w-sm mx-auto">
+			Scroll down to see how it works.
 		</p>
 
 	</section>
